--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ sentence-transformers>=2.2.0
 pinecone>=5.0.0
 
 # LLM integration
-google-generativeai>=0.3.0
+groq>=0.4.0
 
 # Environment variables
 python-dotenv>=1.0.0
