Update environment variables for GROQ
Replaced Gemini configuration with GROQ configuration.

--- a/.env
+++ b/.env
@@ -12,6 +12,6 @@ OLLAMA_BASE_URL=http://localhost:11434
 # Embedding Model (optional - defaults to sentence-transformers/all-MiniLM-L6-v2)
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
 
-# Gemini Configuration
-GEMINI_API_KEY=AIzaSyBU4vZNprqzTVvWOKnnWYFavgK53LpoWk4
-GEMINI_MODEL=gemini-2.5-flash
+# GROQ Configuration
+GROQ_API_KEY=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
+GROQ_MODEL=llama-3.1-8b-instant
