Fix source citations, improve factual answer generation, and add comprehensive logging
- P1: Added 15 new URLs and scraped 12 documents (97 chunks) with 100% information coverage
- P2: Fixed validation logic (warnings no longer block valid responses), added detailed logging
- P3: Fixed source URL extraction and rendering (collect URLs before truncation, handle empty strings, add HTML escaping)
- Improved source URL flow through entire pipeline
- Enhanced error handling and logging throughout

--- a/.env
+++ b/.env
@@ -6,12 +6,11 @@ PINECONE_API_KEY=pcsk_3WRvT4_ELLGtBE5MqMLTUXrAypYrDi51wG9uTnyK5oEoZfJ1jUV98454ED
 PINECONE_ENVIRONMENT=us-east-1
 PINECONE_INDEX_NAME=ragchatbot
 
-# Ollama Configuration (optional - defaults to localhost:11434)
-OLLAMA_BASE_URL=http://localhost:11434
+
 
 # Embedding Model (optional - defaults to sentence-transformers/all-MiniLM-L6-v2)
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
 
 # Gemini Configuration
-GEMINI_API_KEY=AIzaSyBU4vZNprqzTVvWOKnnWYFavgK53LpoWk4
-GEMINI_MODEL=gemini-2.5-flash
+GROQ_API_KEY=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
+GROQ_MODEL=llama-3.1-8b-instant
