--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-﻿# Environment Variables Template
+# Environment Variables for Mutual Fund FAQ Chatbot
 # Copy this file to .env and fill in your actual values
 
-# Pinecone Configuration
-PINECONE_API_KEY=your_pinecone_api_key_here
-PINECONE_ENVIRONMENT=us-east-1
-PINECONE_INDEX_NAME=mutual-fund-faq
-
-# Gemini Configuration
-GEMINI_API_KEY=AIzaSyBU4vZNprqzTVvWOKnnWYFavgK53LpoWk4
+# Gemini API Configuration
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.5-flash
 
-# Embedding Model (optional - defaults to sentence-transformers/all-MiniLM-L6-v2)
-EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
+# Pinecone Configuration
+# Get your API key from: https://www.pinecone.io/
+PINECONE_API_KEY=your_pinecone_api_key_here
+PINECONE_INDEX_NAME=ragchatbot
