--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ ENV/
 Thumbs.db
 
 # Data files (optional - uncomment if you don't want to commit data)
-# data/raw/
-# data/processed/
+data/raw/
+data/processed/
 
 # Logs
 *.log
