--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,24 @@
-# Environment variables
-.env
-.env.local
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-.venv
-.env/
-.env.example/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Data files (optional - uncomment if you don't want to commit data)
-data/raw/
-data/processed/
-
 # Logs
+logs
 *.log
-logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Streamlit
-.streamlit/secrets.toml
-
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
