--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ selenium>=4.15.0
 webdriver-manager>=4.0.0
 
 # Vector database and embeddings
-sentence-transformers>=2.2.0
+sentence-transformers==2.2.2
+torch==2.0.1
+torchvision==0.15.2
 pinecone>=5.0.0
 
 # LLM integration
