Add Google Drive upload option for logs
- Add optional Drive upload (service account) for trace CSV
- Auto-upload if UPLOAD_TO_GDRIVE=true; manual upload button in sidebar
- Add Drive dependencies to requirements

Env vars:
- GDRIVE_SERVICE_ACCOUNT_JSON
- GDRIVE_FOLDER_ID
- UPLOAD_TO_GDRIVE (default false)
- LOG_TRACES / LOG_CSV_PATH already supported

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,10 @@ sentence-transformers>=3.0.0
 torch>=2.5.0
 pinecone>=5.0.0
 
+# Google Drive upload for logs (optional)
+google-api-python-client>=2.129.0
+google-auth>=2.34.0
+
 # LLM integration
 groq>=0.4.0
 
